# parsecpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  amalgamate.bat  amalgamate.sh
.github/workflows/: BuildLinux.yml  CodeQL.yml  CompilerCheckClang16.yml  CompilerCheckClang17.yml  CompilerCheckGCC12.yml  CompilerCheckGCC13.yml  cmake.yml
benchmark/: CMakeLists.txt  applyFirstMatchBenchmark.cpp  compareWaysBenchmark.cpp  contextBenchmark.cpp  errorHandling.cpp  jsonBenchmark.cpp  lazyBenchmark.cpp  modifierBenchmark.cpp  opBenchmark.cpp  regexBenchmark.cpp
benchmark/data/: 100k.json  binance.json  colors.css
benchmarks/: CMakeLists.txt  applyFirstMatchBenchmark.cpp  applyFirstMatchCompareBenchmark.cpp  benchmarkHelper.hpp  bindBenchmark.cpp  compareWaysBenchmark.cpp  contextBenchmark.cpp  errorHandling.cpp  jsonBenchmark.cpp  jsonImplLazy.cpp  lazyBenchmark.cpp  modifierBenchmark.cpp  opBenchmark.cpp  regexBenchmark.cpp  specializedParsersBenchmark.cpp
benchmarks/data/: 256kb-min.json  256kb.json  64kb-min.json  64kb.json  tags.txt
examples/: CMakeLists.txt
examples/benchParser/: CMakeLists.txt  bench-parser.cpp
examples/calc/: CMakeLists.txt  calc.cpp
examples/doc/: Info.md  benchmark.md
examples/json/: CMakeLists.txt  json.cpp
examples/quick/: CMakeLists.txt  quick.cpp
examples/quickExamples/: quick.cpp
include/parsecpp/: all.h  all.hpp  full.hpp  fwd.hpp
include/parsecpp/common/: base.h  debug.h  debugM.h  map.h  number.h  process.h  string.h
include/parsecpp/core/: baseTypes.h  buildParams.h  concept.h  context.h  expected.h  forward.h  forwardImpl.h  lazy.h  lift.h  modifier.h  parser.h  parsingError.h  stream.h
include/parsecpp/utils/: applyFirstMatch.h  cacher.hpp  cmp.h  constexprString.hpp  finally.h  funcHelper.h  hitCounter.h  memoizer.hpp  modifier.h  sourceLocation.h
single_include/parsecpp/: all.hpp  full.hpp  fwd.hpp
tests/: CMakeLists.txt  CodeCoverage.cmake  testHelper.h  unit.cpp
tests/Common/: baseTest.cpp  debugTest.cpp  lazyTest.cpp  mapTest.cpp  opTest.cpp  stringTest.cpp
tests/common/: baseTest.cpp  debugTest.cpp  lazyTest.cpp  mapTest.cpp  numberTest.cpp  processTest.cpp  stringTest.cpp
tests/composition/: colorTest.cpp  csvTest.cpp
tests/core/: bindTest.cpp  contextTest.cpp  exceptionTest.cpp  forwardHeaderTest.cpp  forwardTest.cpp  opPriorityTest.cpp  opTest.cpp  utf8Test.cpp
tests/utils/: applyFirstMatchTest.cpp  cacher.cpp  constexprStringTest.cpp  finallyTest.cpp  hitCounterTest.cpp  modifierTest.cpp
tools/: amalgamate_config_all.json  amalgamate_config_full.json  amalgamate_config_fwd.json
